# snakemake-storage-plugin-webdav

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
docs/: intro.md
snakemake_storage_plugin_fsspec/: __init__.py
snakemake_storage_plugin_webdav/: __init__.py
tests/: tests.py
