[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "snakemake-storage-plugin-webdav"
version = "0.1.0"
description = ""
authors = ["Johannes Koester <johannes.koester@uni-due.de>",]
readme = "README.md"
repository = "https://github.com/your/plugin"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/webdav.html"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.15.0"
snakemake-interface-storage-plugins = "^3.0.0"
webdavclient3 = "^3.14.6"

[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
flake8 = "^6.1.0"
coverage = "^7.3.3"
pytest = "^7.4.3"
snakemake = {git="https://github.com/snakemake/snakemake.git"}
